skipping atspi_event_listener_[register/deregister]_no_data

https://bugzilla.gnome.org/show_bug.cgi?id=707010